@@ -71,7 +71,7 @@ file as "iTerm Bookmarks".</LI>
 <BR>
 <FONT SIZE="-1">
 Modified: Aug 31st, 2003<BR>Created: Dec 18th, 2002<BR>
-<A HREF="MAILTO:fabian@macvillage.net">Fabian</A> and <A HREF="MAILTO:ujwal@setlurgroup.com">Ujwal S. Sathyam</A><BR>
+<A HREF="MAILTO:fabian_at_macvillage_dot_net">Fabian</A> and <A HREF="MAILTO:ujwal_at_setlurgroup_dot_com">Ujwal S. Sathyam</A><BR>
 Support free software by writing one.<BR>
 </FONT>
 
