@@ -188,7 +188,7 @@ These scripts can then be saved as stand-alone executable applications.
 
 <FONT SIZE="5"><STRONG>Autolaunching script:</STRONG></FONT><BR>
 <UL>
-iTerm also supports autolaunching of an Applescript on startup. On startup, iTerm looks for an Applescript called <b>"AutoLaunch.scpt"</b> under <b>~/Library/Application Support/iTerm</b>. If it is found, the <b>AutoLauch.scpt</b> is launched and executed. This feature can be used to launch multiple sessions in defined windows and tabs when iTerm atarts up.
+iTerm also supports autolaunching of an Applescript on startup. On startup, iTerm looks for an Applescript called <b>"AutoLaunch.scpt"</b> under <b>~/Library/Application Support/iTerm</b>. If it is found, the <b>AutoLauch.scpt</b> is launched and executed. This feature can be used to launch multiple sessions in defined windows and tabs when iTerm starts up.
 </UL>
 
 
@@ -199,7 +199,7 @@ iTerm also supports autolaunching of an Applescript on startup. On startup, iTer
 <BR>
 <FONT SIZE="-1">
 Modified: Aug 31st, 2003<BR>Created: Dec 18th, 2002<BR>
-<A HREF="MAILTO:fabian@macvillage.net">Fabian</A> and <A HREF="MAILTO:ujwal@setlurgroup.com">Ujwal S. Sathyam</A><BR>
+<A HREF="MAILTO:fabian_at_macvillage_dot_net">Fabian</A> and <A HREF="MAILTO:ujwal_at_setlurgroup_dot_com">Ujwal S. Sathyam</A><BR>
 Support free software by writing one.<BR>
 </FONT>
 
