@@ -1,3 +1,7 @@
+2003-09-09	fabian
+
+    * Changed the email address in website html files to stop spams.
+    
 2003-09-08	ujwal
 
     * Addressbook menu gets shortcuts only for main menu.
